<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:title="@string/dashboard_menu"

            />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/tune_your_board_menu" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/stats_menu" />
        <item
            android:id="@+id/nav_manage"
            android:title="@string/feeds_menu" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_profile"
                android:icon="@android:drawable/presence_offline"
                android:title="@string/profile_menu" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/sing_out_menu" />
        </menu>
    </item>

</menu>
